--- a/Project03/pom.xml
+++ b/Project03/pom.xml
@@ -159,19 +159,16 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.4</version>
 		</dependency>
-		
-		<!-- Apache Commons File Upload -->
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2</version>
+			<version>1.3.1</version>
 		</dependency>
-	
-		<!-- Apache Commons IO 추가 -->
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
+			<version>2.4</version>
 		</dependency>
 
 	</dependencies>
