--- a/Project03/pom.xml
+++ b/Project03/pom.xml
@@ -17,6 +17,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- Spring-context-support 이메일 보내기-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.3.3.RELEASE</version>
+		</dependency>	
+	
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -144,6 +151,13 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.0</version>
+		</dependency>
+		
+		<!-- Email 인증 javax.mail 추가! -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
 		</dependency>
 
 		<!-- Spring-JDBC 라이브러리 -->
